--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Arxiv Alpha Linker",
+  "name": "Arxiv to AlphaXiv Linker",
   "version": "1.0",
   "description": "Adds a link to alphaarxiv.org on arxiv.org abstract pages.",
   "content_scripts": [
